<resources>
    <string name="app_name">SignUpForm</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="ok">OK</string>
    <string name="submit">Submit</string>

    <string name="username_label">Username:</string>
    <string name="password_label">Password:</string>
    <string name="confirm_label">Confirm:</string>

    <string name="enter_username_hint">Please enter your username</string>
    <string name="enter_password_hint">Please enter your password</string>
    <string name="enter_confirm_password_hint">Please confirm your password</string>


</resources>
